@@ -1,0 +1,73 @@
+.if t .ds TX T\\h'-0.1667m'\\v'0.20v'E\\v'-0.20v'\\h'-0.125m'X
+.if t .ds LX L\\h'-0.36m'\\v'-0.15v'\\s-2A\\s+2\\h'-0.15m'\\v'0.15v'T\\h'-0.1667m'\\v'0.20v'E\\v'-0.20v'\\h'-0.125m'X
+.TH DVISPC 1
+.SH NAME
+dvispc \- Modify a DVI file to be page-independent in specials
+.SH SYNOPSIS
+.B dvispc
+[\fB\-c\fR] [\fB\-bvz\fR]
+\fIinput_dvi_file\fR [\fIoutput_dvi_file\fR]
+.PP
+.B dvispc \-d
+\fIinput_dvi_file\fR
+.PP
+.B dvispc \-s
+[\fB\-p..\fR] \fIinput_dvi_file\fR [\fIoutput_text_file\fR]
+.PP
+.B dvispc \-a
+[\fB\-ltv\fR] [\fB\-J..\fR] [\fB\-p..\fR] [\fB\-r..\fR]
+\fIinput_dvi_file\fR [\fIoutput_text_file\fR]
+.PP
+.B dvispc \-x[..]
+[\fB\-ltv\fR] [\fB\-r..\fR]
+[\fIinput_text_file\fR] \fIoutput_dvi_file\fR
+.SH DESCRIPTION
+.B Dvispc
+is a utility to modify/edit \*(TX DVI file with the following features:
+.PP
+Option \fB\-c\fR (default):
+  modify an input DVI to be page-independent in specials (default)
+.PP
+Option \fB\-d\fR:
+  check if an input DVI is page-independent in specials
+.PP
+Option \fB\-s\fR:
+  show all specials in the input DVI
+.PP
+Option \fB\-a\fR:
+  translate DVI into a Text (like \fBdv2dt\fR in dtl)
+.PP
+Option \fB\-x\fR:
+  translate Text into a DVI (like \fBdt2dv\fR in dtl)
+.PP
+The main feature of
+.B dvispc
+is the first one, to make a page-independent DVI file.
+.PP
+A "pure" DVI file must be actually page-independent.
+However in recent years, DVI files with lots of \\special's (color,
+annotation etc.) are commonly used, and they are not always
+page-independent. In such case, for example,
+.B dviselect
+or
+.B dvidvi
+fails to preserve \\special's (e.g. page color might be lost).
+.PP
+The program
+.B dvispc
+corrects such DVI files to be page-independent, which can be properly
+processed by common DVI drivers such as \fBdvips\fR and \fBdvipdfmx\fR.
+.SH SEE ALSO
+dviselect(1), dvidvi(1), dvips(1), dvipdfmx(1)
+.SH AUTHOR
+The program
+.B dvispc
+is derived from the DVIOUT package (DVI previewer for Windows)
+by Toshio OSHIMA ("SHIMA"), Yoshiki OTOBE, and Kazunori ASAYAMA.
+Current version is maintained by Japanese \*(TX Development Community
+<https://texjp.org>.
+.br
+For more information, please refer to
+dvispc-en.txt (in English) and dvispc-ja.txt (in Japanese)
+on our GitHub repository, <https://github.com/texjporg/tex-jp-build>
+(under source/texk/dviout-util directory).
